--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",  // Construir el proyecto antes de desplegar
-    "deploy": "gh-pages -d build", // Comando para desplegar en GitHub Pages
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
