--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tecba",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<tu-usuario-github>.github.io/<nombre-repositorio>",
+  "homepage": "https://ElmerGama.github.io/tecba.git",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@testing-library/jest-dom": "^5.17.0",
