--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tecba",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ElmerGama.github.io/tecba.git",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -42,5 +41,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
-  }
+  },
+  "homepage": "https://ElmerGama.github.io/tecba.git"
 }
