--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://ElmerGama.github.io/tecba"
+  "homepage": "https://elmergama.github.io/tecba"
 }
